clusters/talos-cluster/speaches/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: speaches
  labels:
    name: speaches
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
